--- a/La card mas basica/Styles.css
+++ b/La card mas basica/Styles.css
@@ -2,7 +2,6 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    
 }
 
 .card {
@@ -13,16 +12,13 @@ body{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     overflow: hidden;
-    
 }
-  
- 
   
 .card h1 {
     position: relative;
     z-index: 3;
     margin: 3px;
-    font-size: 25px;
+    font-size: 1.5rem;
 }
 
 .card b{
@@ -40,10 +36,10 @@ img{
     object-fit: fill;
 }
 
-.card p{
+.card p {
     margin-top: 0;
     margin-left: 3px;
-    font-size: 15px;
+    font-size: 1rem;
 }
   
 .card a {
@@ -62,7 +58,7 @@ img{
   
 .card-link {
     font-weight: bold;
-    font-size: 30px;
+    font-size: 2.125rem;
 }
   
 .card-link:hover {
